<resources>
    <string name="app_name">PAMnPA</string>

    <string name="activity_main_name">MAIN</string>

    <string name="activity_1_name">Lab1 - Oceny</string>
    <string name="activity_1_text_name">Imię</string>
    <string name="activity_1_text_surname">Nazwisko</string>
    <string name="activity_1_text_points">Punkty</string>

    <string name="activity_2_name">Lab2 - Edit Oceny</string>
    <string name="activity_2_b_goBack_text">GObACK</string>
    <string name="activity_2_b_calculate_text">Wylicz średnią</string>
    <string-array name="activity_2_subjects">
        <item>Math</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Yapology</item>
        <item>Brainrotology</item>
        <item>Sigmology</item>
        <item>History</item>
        <item>Enflish</item>
        <item>Skibidology</item>
    </string-array>

    <string name="activity_3_name">DB - Lab3</string>
    <string name="activity_3_menu_del">Wipe all data</string>
    <string name="activity_3_b_goBack_text">GObACK</string>
    <string name="activity_3_add_mr">manufacturer</string>
    <string name="activity_3_add_mr_hint">the creator</string>
    <string name="activity_3_add_ml">model</string>
    <string name="activity_3_add_ml_hint">the thing</string>
    <string name="activity_3_add_vn">Android version</string>
    <string name="activity_3_add_vn_hint">the number</string>
    <string name="activity_3_add_se">web site</string>
    <string name="activity_3_add_se_hint">the address (start with http://)</string>
    <string name="activity_3_add_b_se">Open web site</string>
    <string name="activity_3_add_b_cancel">Cancel</string>
    <string name="activity_3_add_b_save">Save</string>

    <string name="activity_4_name">Threading</string>
    <string name="activity_4_url_label">URL:</string>
    <string name="activity_4_get_button">gEt InFo</string>
    <string name="activity_4_get_size_label">FiLe sIzE:</string>
    <string name="activity_4_get_type_label">fILe TypE:</string>
    <string name="activity_4_downl_button">DoWnLoAd</string>
    <string name="activity_4_downl_label">bYTEs DownLoadEd:</string>

</resources>